<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/zxbf"
        android:gravity="center"
        android:background="#2d3436"
        android:textColor="#55efc4"
        android:textSize="22sp" />
    <Button
        android:id="@+id/dyw"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:background="@drawable/shape_button_corners"
        android:textSize="14sp"
        android:layout_marginLeft="320dp"
        android:text="@string/dycsm"
        android:textColor="#d63031" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/bt_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_play"
            android:contentDescription="@string/bo_fang" />
        <VideoView
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:contentDescription="@string/puImg" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/bt_play2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_play"
            android:contentDescription="@string/bo_fang" />
        <VideoView
            android:id="@+id/video_view2"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:contentDescription="@string/puImg" />
    </LinearLayout>
    <include layout="@layout/nav3" />
</RelativeLayout>