<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true"
    android:background="#3e4145"
    android:baselineAligned="false"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="#00b894"
        tools:ignore="RtlSymmetry">
        <Button
            android:id="@+id/btn_1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/icon1_foreground"
            tools:ignore="ButtonStyle" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/dongHua"
            android:textColor="#fff"
            android:textSize="11sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:ignore="RtlSymmetry">
        <Button
            android:id="@+id/btn_2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/image_foreground"
            tools:ignore="ButtonStyle" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/bi_zhi"
            android:textColor="#fff"
            android:textSize="11sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:ignore="RtlSymmetry">
        <Button
            android:id="@+id/btn_3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/icon3_foreground"
            tools:ignore="ButtonStyle" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/shi_ping"
            android:textColor="#fff"
            android:textSize="11sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:ignore="RtlSymmetry">
        <Button
            android:id="@+id/btn_4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/me_foreground"
            tools:ignore="ButtonStyle" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/me"
            android:textColor="#fff"
            android:textSize="11sp" />
    </LinearLayout>
</LinearLayout>